fix z-index header menu

--- a/assets/styles/scss/blocks/_header-categories.scss
+++ b/assets/styles/scss/blocks/_header-categories.scss
@@ -60,7 +60,7 @@
         background-color: #fafafa;
         border: 1px solid #e6e6e6;
         box-shadow: 0 3px 6px 1px rgba(222, 222, 222, 0.7);
-        z-index: 10;
+        z-index: 100;
         &::before {
             content: "";
             position: absolute;
